# MathLLM

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  ISSUES.md  KaggleCompetition.txt  NUMINAMATH_SAMPLES.md  PROGRESS.md  Part1.txt  Part2.md  Part2.txt  Part3.txt  QwenArchitecture.txt  TRM_PAPER_VS_GEMINI_SPEC.md  TRM_changes.md  pyproject.toml  requirements.txt  run_train.py  setup_kaggle.bat  test_model.py  tok.txt  train_extra_layer.py  train_finetune.py  train_trm.py  upload_kaggle_dataset.py
eval/: __init__.py  gsm8k_eval.py  gsm8k_eval_batch.py  qwen_baseline_eval.py  trm_eval_simple.py  trm_identity_eval.py
kaggle-test/: gpu-test.py  notebookc18623e972.ipynb
kaggle_dataset/: TODO.md  main.py  pyproject.toml  train_finetune.py  train_lora.py  train_trm.py
kaggle_dataset/eval/: gsm8k_eval.py  qwen_baseline_eval.py  trm_eval_simple.py
kaggle_dataset/src/: __init__.py  engine.py  layers.py  model.py  train.py
src/: config.py  dataset.py  dis_utils.py  engine.py  heads.py  interface.py  layers.py  model.py  test_import.py  train.py
tests/: test_dis.py
