[project]
name = "mathllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "hf-transfer>=0.1.9",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.25.1",
]
